--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/stack": "^7.5.0",
+    "crypto-js": "^4.2.0",
     "expo": "~54.0.18",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
+    "jspdf": "^3.0.3",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-qrcode-svg": "^6.3.15",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.18.0",
+    "react-native-signature-canvas": "^5.0.1",
+    "react-native-web": "^0.21.0"
   },
   "private": true
 }
