--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,14 +14,14 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.5.0",
     "expo": "~54.0.18",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.16",
     "expo-print": "~15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "^5.6.1",
