--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "migrate": "node src/db/migrate.js",
-    "migrate-admin": "node src/db/migrate-admin.js"
+    "migrate-admin": "node src/db/migrate-admin.js",
+    "migrate-days": "node src/db/migrate-number-of-days.js"
   },
   "keywords": ["installment", "book", "api"],
   "author": "",
