--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native": "0.81.5",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.18.0",
+    "react-native-screens": "~4.16.0",
     "react-native-signature-canvas": "^5.0.1",
     "react-native-web": "^0.21.0"
   },
