--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-native-community/netinfo": "^11.0.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.5.0",
     "expo": "~54.0.18",
+    "expo-network": "~7.0.1",
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.16",
     "expo-print": "~15.0.7",
