--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
+    "compression": "^1.7.4",
     "sqlite3": "^5.1.7",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
