feat: Complete ASO documentation and store listings
Added comprehensive App Store Optimization materials:

Store Listings:
- English (en-US) store listing with full description
- Tamil (ta-IN) localized store listing
- Keywords, captions, and promotional text
- Store listings README with submission guide

Legal Documents:
- Privacy Policy (PRIVACY_POLICY.md)
- Terms of Service (TERMS_OF_SERVICE.md)
- Compliant with Indian IT Act, GDPR, CCPA

Design Specifications:
- App icon design specs (ICON_DESIGN_SPECS.md)
- Multiple design concepts and variations
- Technical requirements for all platforms
- Budget recommendations and tools

Checklist & Guide:
- Comprehensive ASO checklist (ASO_CHECKLIST.md)
- Pre-launch, submission, and post-launch tasks
- KPI tracking and success milestones
- Tools and resources

App Configuration:
- Updated app.json with proper metadata
- App name: "Thavanai - Daily Installment Book"
- Bundle IDs updated for consistency
- Added description and permissions

Ready for:
✅ Store listing creation
✅ Legal compliance
⏳ Icon design (specs ready)
⏳ Screenshot creation (captions ready)
⏳ App store submission

--- a/app.json
+++ b/app.json
@@ -1,32 +1,47 @@
 {
   "expo": {
-    "name": "thavanai_mobile",
-    "slug": "thavanai_mobile",
+    "name": "Thavanai - Daily Installment Book",
+    "slug": "thavanai-daily-installment",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "jsEngine": "hermes",
     "newArchEnabled": false,
+    "description": "Track daily installments & loans digitally. Perfect for money lenders with Tamil & English support, digital signatures, and offline mode.",
+    "privacy": "public",
+    "primaryColor": "#2196F3",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2196F3"
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.sathishkumarmnm.tapp",
+      "bundleIdentifier": "com.sathishkumarmnm.thavanai",
+      "buildNumber": "1.0.0",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSCameraUsageDescription": "Allow Thavanai to access your camera to take photos for book backgrounds.",
+        "NSPhotoLibraryUsageDescription": "Allow Thavanai to access your photo library to select backgrounds for your books."
+      },
+      "config": {
+        "usesNonExemptEncryption": false
       }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#2196F3"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.sathishkumarmnm.tapp"
+      "package": "com.sathishkumarmnm.thavanai",
+      "versionCode": 1,
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
