feat: Rebrand app to 'eThavanai Book - Daily Ledger'
Updated app name across all documentation and configuration:

App Configuration (app.json):
- Name: 'eThavanai Book - Daily Ledger' (31 chars)
- Slug: 'ethavanai-book-daily-ledger'
- Description updated to emphasize 'electronic ledger'

Store Listings:
- English (en-US.md): Complete rebrand with new descriptions
- Tamil (ta-IN.md): 'eThavanai புத்தகம் - தினசரி பேரேடு'
- Keywords updated: 'daily ledger' prioritized
- Short descriptions optimized for ASO

Documentation Updates:
- ASO_SUMMARY.md: Reflect new app name
- ASO_CHECKLIST.md: Mark app name as finalized
- ICON_DESIGN_SPECS.md: Updated design brief and branding

Benefits:
✅ Modern 'e' prefix suggests electronic/digital
✅ 'Daily Ledger' = professional + keyword-rich
✅ Better ASO with 4 strong keywords (e + Book + Daily + Ledger)
✅ Brandable 'eT' monogram concept
✅ Under 32 characters with room for subtitles

--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "Thavanai - Daily Installment Book",
-    "slug": "thavanai-daily-installment",
+    "name": "eThavanai Book - Daily Ledger",
+    "slug": "ethavanai-book-daily-ledger",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "jsEngine": "hermes",
     "newArchEnabled": false,
-    "description": "Track daily installments & loans digitally. Perfect for money lenders with Tamil & English support, digital signatures, and offline mode.",
+    "description": "Electronic daily installment ledger for modern lenders. Track loans digitally with Tamil & English support, digital signatures, and offline mode.",
     "privacy": "public",
     "primaryColor": "#2196F3",
     "splash": {
