fix: Update eas.json and app.json for Play Store build
- Added cli.appVersionSource: 'remote' to eas.json
- Changed Android production buildType from 'apk' to 'app-bundle' (AAB required for Play Store)
- Fixed slug mismatch: updated slug to 'thavanai_mobile' to match EAS project
- Removed incorrect gradleCommand from production build

These changes fix the EAS build errors and ensure proper AAB generation for Play Store submission.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "eThavanai Book - Daily Ledger",
-    "slug": "ethavanai-book-daily-ledger",
+    "slug": "thavanai_mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -53,6 +53,7 @@
       "eas": {
         "projectId": "f07215ea-a185-46ad-b7c7-a5a1cda8ae5c"
       }
-    }
+    },
+    "owner": "sathishkumarmnm"
   }
 }
