feat: Add Privacy Policy and Terms of Service HTML pages
Created professional HTML versions of legal documents:

📄 Privacy Policy (privacy.html):
- Complete privacy policy with all sections
- Professional styling and layout
- Mobile responsive design
- Color-coded sections for readability
- Contact information included
- Tamil notice included
- URL: https://tapp.thesrsconsulting.in/privacy.html

📄 Terms of Service (terms.html):
- Complete terms with 22 sections
- Clear formatting with section numbers
- Warning boxes for important clauses
- Summary section for quick reference
- Professional legal document styling
- Mobile responsive
- Links to privacy policy
- URL: https://tapp.thesrsconsulting.in/terms.html

✅ Updated app.json:
- Added privacyPolicyUrl field
- Points to hosted privacy policy

Both documents ready for Google Play Store submission!

--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "newArchEnabled": false,
     "description": "Electronic daily installment ledger for modern lenders. Track loans digitally with Tamil & English support, digital signatures, and offline mode.",
     "privacy": "public",
+    "privacyPolicyUrl": "https://tapp.thesrsconsulting.in/privacy.html",
     "primaryColor": "#2196F3",
     "splash": {
       "image": "./assets/splash-icon.png",
