feat: Implement AdMob monetization with banner, interstitial, and app open ads
Complete AdMob integration for app monetization:

📦 Package Installation:
- Added react-native-google-mobile-ads SDK
- Configured Expo plugin

🔧 Configuration:
- app.json: Added AdMob App ID for Android & iOS
- src/config/admob.js: Main configuration file
  - App ID: ca-app-pub-2582947091237108~3955174028
  - Banner: ca-app-pub-2582947091237108/2175188493
  - Interstitial: ca-app-pub-2582947091237108/4309670898
  - App Open: ca-app-pub-2582947091237108/9992957005
  - Test ad units for development
  - Ad frequency limits (3min interval, 5/day max)

📱 Banner Ads:
- src/components/BannerAd.js: Reusable banner component
  - Adaptive banner size
  - Respects premium users (no ads)
  - Error handling

📺 Interstitial Ads:
- src/utils/interstitialAds.js: Smart interstitial manager
  - Frequency limits (180s min, 5/day max)
  - AsyncStorage tracking
  - Auto-reload after shown
  - Premium user check

🚀 App Open Ads:
- src/utils/appOpenAds.js: App launch ads
  - Show on app open (max 1/hour)
  - AppState integration
  - Premium user check

🎯 App.js Updates:
- Initialize AdMob on app start
- Initialize interstitial ad manager
- Initialize app open ad manager
- AppState listener for foreground detection

💎 Premium User Support:
- Database migration completed
- server/src/db/add-premium-users.sql
- server/src/db/migrate-premium.js
- users.is_premium field
- users.premium_expires_at field
- users.books_created_count field
- premium_transactions table
- ad_impressions table (analytics)

📊 Ad Strategy:
- Banner: Dashboard bottom & Daily Entries bottom (to add)
- Interstitial: After 5th book creation (to add)
- App Open: On app launch (1/hour max)
- Premium users: No ads shown

📖 Documentation:
- ADMOB_IMPLEMENTATION.md: Complete guide
  - All ad unit IDs documented
  - Implementation steps
  - Testing guide
  - Revenue estimation
  - Best practices

🧪 Testing:
- Development mode uses test ads
- Productio

--- a/app.json
+++ b/app.json
@@ -24,10 +24,12 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "NSCameraUsageDescription": "Allow Thavanai to access your camera to take photos for book backgrounds.",
-        "NSPhotoLibraryUsageDescription": "Allow Thavanai to access your photo library to select backgrounds for your books."
+        "NSPhotoLibraryUsageDescription": "Allow Thavanai to access your photo library to select backgrounds for your books.",
+        "GADApplicationIdentifier": "ca-app-pub-2582947091237108~3955174028"
       },
       "config": {
-        "usesNonExemptEncryption": false
+        "usesNonExemptEncryption": false,
+        "googleMobileAdsAppId": "ca-app-pub-2582947091237108~3955174028"
       }
     },
     "android": {
@@ -42,13 +44,17 @@
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE"
-      ]
+      ],
+      "config": {
+        "googleMobileAdsAppId": "ca-app-pub-2582947091237108~3955174028"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-sqlite"
+      "expo-sqlite",
+      "react-native-google-mobile-ads"
     ],
     "extra": {
       "eas": {
