fix: Add AdMob App IDs to plugin configuration
Fixed AdMob plugin configuration in app.json:
- Added androidAppId to plugin options
- Added iosAppId to plugin options
- Ran prebuild to regenerate native code

This fixes the errors:
- 'No androidAppId was provided'
- 'No iosAppId was provided'
- 'RNGoogleMobileAdsModule' could not be found

The plugin now has proper configuration and native modules are generated.

--- a/app.json
+++ b/app.json
@@ -54,7 +54,13 @@
     },
     "plugins": [
       "expo-sqlite",
-      "react-native-google-mobile-ads"
+      [
+        "react-native-google-mobile-ads",
+        {
+          "androidAppId": "ca-app-pub-2582947091237108~3955174028",
+          "iosAppId": "ca-app-pub-2582947091237108~3955174028"
+        }
+      ]
     ],
     "extra": {
       "eas": {
