--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.sathishkumarmnm.tapp'
+    namespace 'com.thesrsconsulting.tapp'
     defaultConfig {
-        applicationId 'com.sathishkumarmnm.tapp'
+        applicationId 'com.thesrsconsulting.tapp'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
