--- a/ios/eThavanaiBookDailyLedger.xcodeproj/xcshareddata/xcschemes/eThavanaiBookDailyLedger.xcscheme
+++ b/ios/eThavanaiBookDailyLedger.xcodeproj/xcshareddata/xcschemes/eThavanaiBookDailyLedger.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "thavanaimobile.app"
-               BlueprintName = "thavanaimobile"
-               ReferencedContainer = "container:thavanaimobile.xcodeproj">
+               BuildableName = "eThavanaiBookDailyLedger.app"
+               BlueprintName = "eThavanaiBookDailyLedger"
+               ReferencedContainer = "container:eThavanaiBookDailyLedger.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "thavanaimobileTests.xctest"
-               BlueprintName = "thavanaimobileTests"
-               ReferencedContainer = "container:thavanaimobile.xcodeproj">
+               BuildableName = "eThavanaiBookDailyLedgerTests.xctest"
+               BlueprintName = "eThavanaiBookDailyLedgerTests"
+               ReferencedContainer = "container:eThavanaiBookDailyLedger.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "thavanaimobile.app"
-            BlueprintName = "thavanaimobile"
-            ReferencedContainer = "container:thavanaimobile.xcodeproj">
+            BuildableName = "eThavanaiBookDailyLedger.app"
+            BlueprintName = "eThavanaiBookDailyLedger"
+            ReferencedContainer = "container:eThavanaiBookDailyLedger.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "thavanaimobile.app"
-            BlueprintName = "thavanaimobile"
-            ReferencedContainer = "container:thavanaimobile.xcodeproj">
+            BuildableName = "eThavanaiBookDailyLedger.app"
+            BlueprintName = "eThavanaiBookDailyLedger"
+            ReferencedContainer = "container:eThavanaiBookDailyLedger.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
