feat: UI improvements and favorite books feature
- Fixed + button overlap with border (added margin and border radius)
- Improved text visibility with colored badge backgrounds for amounts
- Added 'Balance:' label for clarity
- Fixed owner/borrower count to show filtered results
- Added favorite books feature with database migration
- Favorites always appear at top of dashboard with ⭐ star
- Created BookDetailScreen for full book view with all action buttons
- Updated dashboard to single-line compact cards
- Added translations for favorite feature (EN & TA)
- Backend API endpoint: PATCH /books/:id/favorite

--- a/eas.json
+++ b/eas.json
@@ -18,6 +18,9 @@
       },
       "android": {
         "buildType": "apk"
+      },
+      "ios": {
+        "buildConfiguration": "Release"
       }
     },
     "production": {
