--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "body-parser": "^1.20.2",
     "swagger-ui-express": "^5.0.0",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
