--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~54.0.18",
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.16",
+    "expo-linear-gradient": "~15.0.7",
     "expo-print": "~15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-sqlite": "~16.0.8",
