docs: add signing key fix guide and update EAS credentials config
- Created SIGNING_KEY_FIX.md with comprehensive troubleshooting
- Updated eas.json to use remote credentials source
- Documented solutions for signing key mismatch error

--- a/eas.json
+++ b/eas.json
@@ -28,7 +28,8 @@
         "NODE_ENV": "production"
       },
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "app-bundle",
+        "credentialsSource": "remote"
       },
       "ios": {
         "buildConfiguration": "Release"
