fix: change package name back to com.sathishkumarmnm.tapp to match Play Store
- Updated Android package in app.json
- Updated iOS bundleIdentifier in app.json
- This fixes the signing key mismatch error
- Package now matches Google Play Store registration

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.thesrsconsulting.tapp'
+    namespace 'com.sathishkumarmnm.tapp'
     defaultConfig {
-        applicationId 'com.thesrsconsulting.tapp'
+        applicationId 'com.sathishkumarmnm.tapp'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
