--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,13 +87,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.sathishkumarmnm.tapp'
+    namespace 'com.thesrsconsulting.tapp'
     defaultConfig {
-        applicationId 'com.sathishkumarmnm.tapp'
+        applicationId 'com.thesrsconsulting.tapp'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0.0"
+        versionName "0.0.1"
 
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
     }
