--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.5.0",
-    "expo": "~54.0.18",
+    "expo": "54.0.21",
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.16",
     "expo-linear-gradient": "~15.0.7",
