--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-google-mobile-ads": "^15.8.3",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-signature-canvas": "^5.0.1",
-    "react-native-web": "^0.21.0"
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0"
   },
   "private": true
 }
