--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,11 @@
     "migrate-admin": "node src/db/migrate-admin.js",
     "migrate-days": "node src/db/migrate-number-of-days.js"
   },
-  "keywords": ["installment", "book", "api"],
+  "keywords": [
+    "installment",
+    "book",
+    "api"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -29,4 +33,3 @@
     "nodemon": "^3.0.2"
   }
 }
-
