Downgrade to Expo SDK 51 for Xcode 15.1 compatibility
- Downgraded from Expo SDK 54 to SDK 51
- Updated all dependencies to SDK 51 compatible versions
- Fixed Podfile for SDK 51 autolinking
- Successfully installed CocoaPods dependencies
- Added migration documentation

Reason: SDK 54 requires Swift 6 (Xcode 16+) which is incompatible with
this iMac (macOS 13.x max). SDK 51 works with Xcode 15.1 and is
production-ready.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,23 +23,10 @@ prepare_react_native_project!
 target 'eThavanaiBookDailyLedger' do
   use_expo_modules!
 
-  if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
-    config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
-  else
-    config_command = [
-      'npx',
-      'expo-modules-autolinking',
-      'react-native-config',
-      '--json',
-      '--platform',
-      'ios'
-    ]
-  end
-
-  config = use_native_modules!(config_command)
-
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
   use_frameworks! :linkage => ENV['USE_FRAMEWORKS'].to_sym if ENV['USE_FRAMEWORKS']
+
+  config = use_native_modules!
 
   use_react_native!(
     :path => config[:reactNativePath],
