--- a/package.json
+++ b/package.json
@@ -9,30 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
-    "@react-navigation/native": "^7.1.18",
-    "@react-navigation/stack": "^7.5.0",
-    "expo": "54.0.21",
-    "expo-crypto": "~15.0.7",
-    "expo-dev-client": "~6.0.16",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-print": "~15.0.7",
-    "expo-sharing": "~14.0.7",
-    "expo-sqlite": "~16.0.8",
-    "expo-status-bar": "~3.0.8",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-google-mobile-ads": "^15.8.3",
-    "react-native-qrcode-svg": "^6.3.15",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "~4.16.0",
-    "react-native-signature-canvas": "^5.0.1",
-    "react-native-svg": "15.12.1",
-    "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "expo": "~51.0.0",
+    "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.14",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-print": "~13.0.1",
+    "expo-sharing": "~12.0.1",
+    "expo-sqlite": "~14.0.3",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-mobile-ads": "^13.0.0",
+    "react-native-qrcode-svg": "^6.3.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-signature-canvas": "^4.7.2",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
